--- a/projects/router-firebase/index.html
+++ b/projects/router-firebase/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Vite + React</title>
   </head>
-  <body>
+  <body class="bg-blue-200">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
