valorant protocol fetch

--- a/projects/valorant-protocol/index.html
+++ b/projects/valorant-protocol/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
     <title>Valorant Protocol</title>
   </head>
-  <body class="bg-neutral-700">
+  <body class="bg-neutral-700 m-0">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
